[gd_scene load_steps=7 format=3 uid="uid://c774mag5th37b"]

[ext_resource type="Script" uid="uid://c6jn4cxjd17y4" path="res://scripts/machinery/incinerator.gd" id="1_011tm"]
[ext_resource type="Texture2D" uid="uid://cv4u25ygwcxao" path="res://assets/art/machinery/machineryG1_sh.png" id="1_aqwxo"]
[ext_resource type="Texture2D" uid="uid://c7d62fywa4qf3" path="res://assets/art/machinery/machineryG1.png" id="2_5dewp"]
[ext_resource type="PackedScene" uid="uid://bmy7v5qkn5kpj" path="res://scenes/interaction/interactable.tscn" id="3_5dewp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqwxo"]
size = Vector2(34, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5dewp"]
size = Vector2(36, 22)

[node name="Incinerator" type="StaticBody2D" groups=["machinery"]]
collision_mask = 0
script = ExtResource("1_011tm")

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("1_aqwxo")
region_enabled = true
region_rect = Rect2(0, 0, 48, 32)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5dewp")
region_enabled = true
region_rect = Rect2(0, 0, 48, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_aqwxo")

[node name="Interactable" parent="." instance=ExtResource("3_5dewp")]

[node name="CollisionShape2D" parent="Interactable" index="0"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_5dewp")

[node name="ItemProcessing" type="Node2D" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="ItemProcessing"]
anchors_preset = -1
anchor_left = -0.00868056
anchor_top = -0.0190972
anchor_right = 0.00868056
anchor_bottom = -0.015625
offset_left = -11.0
offset_top = -23.0
offset_right = 99.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
step = 0.001
fill_mode = 1
show_percentage = false

[node name="Timer" type="Timer" parent="ItemProcessing"]
wait_time = 3.0

[node name="SpawnMarker" type="Marker2D" parent="ItemProcessing"]
position = Vector2(-9, 23)

[connection signal="body_entered" from="Interactable" to="." method="_on_interactable_body_entered"]
[connection signal="body_exited" from="Interactable" to="." method="_on_interactable_body_exited"]
[connection signal="timeout" from="ItemProcessing/Timer" to="." method="_on_timer_timeout"]

[editable path="Interactable"]
